[package]
name = "w-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json", "form", "cookies", "query"] }
mongodb = { version = "3.5.1" }
encoding_rs = "0.8"
scraper = "0.24"
